fix(/): silly letter spacing

--- a/home/styles.css
+++ b/home/styles.css
@@ -100,6 +100,10 @@ h1 {
     letter-spacing: -0.04em;
 }
 
+:is(h1 *)::after, :is(h1 *)::before {
+    letter-spacing: 0em;
+}
+
 h2 {
     font-size: 30px;
     text-align: center;
